--- a/_includes/highlighted-projects.html
+++ b/_includes/highlighted-projects.html
@@ -2,7 +2,7 @@
 </br>
 <div>
 	<p align="center">
-		<a href="https://niveditharam.github.io/reading-list" target="_blank"><img src="niveditharam.github.io/assets/images/papers.jpg" height="116px" width ="200px"/>
+		<a href="https://niveditharam.github.io/reading-list" target="_blank"><img src="https://niveditharam.github.io/assets/images/papers.jpg" height="116px" width ="200px"/>
 	
         </a>
 		
